tests/fail/fail_struct_missing_field.kl
molda Mesa {
    nter largura,
    nter altura,
}

fn inisiu() {
    Mesa mesa = Mesa { largura: 10 };
    mostran(mesa.largura);
}
